RESOLVED FIXED276607
Unable to load a font face on nxp imx8mp platform
https://bugs.webkit.org/show_bug.cgi?id=276607
Summary Unable to load a font face on nxp imx8mp platform
Pawel Lampe
Reported 2024-07-15 06:11:50 PDT
When WebKit WPE port is built using gcc 13.2.0 for nxp imx8mp (aarch64-poky-linux-gcc, aarch64-poky-linux-g++) font face API is basically not working as it's not loading font faces. It turns out the problem is here: https://github.com/WebKit/WebKit/blob/9878e30a6f7350aca54e860251f34971e6aed1f6/Source/WebCore/css/FontFace.cpp#L87 and what happens is, dataRequiresAsynchronousLoading lambda capture (by reference) behaves as if it was capture by copy and therefore even tho we set the value to false in lambda, the dataRequiresAsynchronousLoading is true after WTF::switchOn() call... So it's likely some compiler bug as e.g. disabling optimizations for that function using #pragma GCC optimize ("O0") helps.
Attachments
Pawel Lampe
Comment 1 2024-07-15 07:14:07 PDT
EWS
Comment 2 2024-07-18 01:24:56 PDT
Committed 281080@main (7cf0e3722de9): <https://commits.webkit.org/281080@main> Reviewed commits have been landed. Closing PR #30819 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.