Cherry-pick 281080@main (7cf0e3722de9). https://bugs.webkit.org/show_bug.cgi?id=276607

Unable to load a font face on nxp imx8mp platform
    https://bugs.webkit.org/show_bug.cgi?id=276607

    Reviewed by Fujii Hironori.

    This PR marks `dataRequiresAsynchronousLoading` not to be optimized or reordered
    thus avoiding the problems with loading font faces on ARM64 platform were GCC
    compiler suffers from a bug that makes it optimize lambda captures too aggressively.

    * Source/WebCore/css/FontFace.cpp:
    (WebCore::FontFace::create):

    Canonical link: https://commits.webkit.org/281080@main

Canonical link: https://commits.webkit.org/274313.367@webkitglib/2.44